2006-09-08 Joerg Wunsch <j@uriah.heep.sax.de>

	Implement numerical output formats for decimal, hexadecimal,
	octal, and binary numbers.
	Closes bug #16129: more output formats for fuse bits
	(avrdude enhancement request)
	* fileio.c: Implement fileio_num() and the itoa_simple()
	helper function.
	* fileio.h: Add new file formats to FILEFMT.
	* main.c: Parse the new file formats.
	* avrdude.1: Document all this.
	* doc/avrdude.texi: (Ditto.)

2006-09-08 Joerg Wunsch <j@uriah.heep.sax.de>

	* fileio.c: CPP statements start in column #1.
	* stk500v2.c: Hide two debug/trace statements behind "verbose".

2006-09-07 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.1: Describe how to disable the DWEN fuse.
	* doc/avrdude.texi: (Ditto.)

2006-09-07 Joerg Wunsch <j@uriah.heep.sax.de>

	* jtagmkII.c: Translate numerical response codes to strings.

2006-09-07 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.1: The avr109 programmer type no longer chokes on
	a wrong avr910 device ID, so remove that description.
	* doc/avrdude.texi: (Ditto.)

2006-09-07 Joerg Wunsch <j@uriah.heep.sax.de>

	* jtagmkII.c: When failing to start in ISP mode, try
	debugWire instead.  This requires the user to eventually
	restart AVRDUE from scratch then.

2006-09-06 Joerg Wunsch <j@uriah.heep.sax.de>

	Add support for the JTAG ICE mkII in ISP mode.
	* avrdude.conf.in (jtag2isp): New programmer entry.
	* config_gram.y: Add K_JTAG_MKII_ISP.
	* jtagmkII.c: Restructure and export some more functions.
	* jtagmkII.h: Declare exported functions.
	* jtagmkII_private.h: Prepare file to be included in stk500v2.c.
	* lexer.l: Add jtagmkii_isp token.
	* stk500v2.c: Implement glue to jtagmkII.c.
	* stk500v2.h: Declare stk500v2_jtagmkII_initpgm().
	* avrdude.1: Document the new programmer support.
	* doc/avrdude.texi: (Ditto.)

2006-09-01 Joerg Wunsch <j@uriah.heep.sax.de>

	* main.c: Add date and time of compilation to the verbose
	greeting message.
	Idea taken from patch #3172: Adds date and time of compile